poco/test/neg/nlib04.poc
/* nlib04.poc - Test Err_poco_lib_version: Library version mismatch */
#pragma poco library "badver"

main()
{
	puts("This should never execute!");
}

